--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  data_connection_checker: ^0.3.4
   equatable: ^1.2.5
   flutter_bloc: ^6.0.6
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
